--- a/static/css/accounting/collect.css
+++ b/static/css/accounting/collect.css
@@ -154,9 +154,10 @@
 }
 
 
-.collectDateBox td:nth-child(8){
+.collectDateBox td:nth-child(8) {
     border-left: 0.1rem solid black;
 }
+
 .collectDateBox td:nth-child(11) {
     border-right: 0.1rem solid black;
 }
@@ -257,24 +258,54 @@
 }
 
 .selectTotal {
-    width: 100%;
+    width: calc(100% - 0.6rem);
     height: 3.6rem;
     box-sizing: border-box;
     background-color: #CDCDCE;
     font-size: 1.4rem;
 }
 
-.selectTotal td:nth-child(1),
-.selectTotal td:nth-child(4),
-.selectTotal td:nth-child(6),
-.selectTotal td:nth-child(7),
-.selectTotal td:nth-child(8) {
+.selectTotal td:nth-child(1){
+    width: 52%;
+}
+
+.selectTotal td:nth-child(2){
+    width: 6%;
+}
+
+.selectTotal td:nth-child(3){
+    width: 10%;
+}
+
+.selectTotal td:nth-child(4){
+    width: 6%;
+}
+
+.selectTotal td:nth-child(5){
+    width: 6%;
+}
+
+.selectTotal td:nth-child(6){
+    width: 14%;
+}
+
+.selectTotal td:nth-child(7){
+    width: 6%;
+}
+
+.selectTotal td{
     text-align: right;
     padding-right: 1rem;
     box-sizing: border-box;
 }
 
-.selectTotal td:nth-child(2) {
+.selectTotal td:nth-child(1){
+    text-align: left;
+    padding-left: 1rem;
+    box-sizing: border-box;
+}
+
+.selectTotal td:nth-child(6){
     text-align: center;
 }
 
@@ -295,6 +326,11 @@
     cursor: pointer;
 }
 
+.collectPopupRegistrationBtn {
+    background-color: #0069D9;
+    margin-right: 1rem;
+}
+
 .collectPopupCloseBtn {
     background-color: #444;
 }
@@ -303,7 +339,7 @@
 
 
 /* 입금내역 불러오기 팝업 */
-.collectingPopupContainer{
+.collectingPopupContainer {
     width: 86rem;
 }
 
@@ -338,21 +374,29 @@
     height: auto;
 }
 
-.popupArticleCollectiong td:nth-child(1),
-.popupArticleCollectiong td:nth-child(2){
-    width: 14%;
+.popupArticleCollectiong td:nth-child(1){
+    width: 6%;
 }
-.popupArticleCollectiong td:nth-child(4),
-.popupArticleCollectiong td:nth-child(6){
-    width: 13%;
-}
-
+.popupArticleCollectiong td:nth-child(2),
 .popupArticleCollectiong td:nth-child(3) {
-    width: 8%;
+    width: 18%;
 }
 
-.popupArticleCollectiong td:nth-child(5) {
-    width: 38%;
+.popupArticleCollectiong td:nth-child(4){
+    width: 10%;
+}
+
+.popupArticleCollectiong td:nth-child(5),
+.popupArticleCollectiong td:nth-child(6),
+.popupArticleCollectiong td:nth-child(7) {
+    width: 16%;
+}
+
+.depositItem td:nth-child(5),
+.depositItem td:nth-child(7) {
+    text-align: right;
+    padding-right: 1rem;
+    box-sizing: border-box;
 }
 
 .collectingPopupHeader {
@@ -478,6 +522,11 @@
     width: 100%;
     height: 3rem;
     font-size: 1.4rem;
+    cursor: pointer;
+}
+
+.historyingPopupScrollBox tr:hover{
+    background-color: #CDCDCE;
 }
 
 .historyingPopupScrollBox td {
@@ -490,31 +539,37 @@
     border-right: 0.1rem solid #D4D4D4;
 }
 
-.popupArticleHistory td:nth-child(1) {
+.popupArticleHistory td:nth-child(1),
+.popupArticleHistory td:nth-child(2){
     width: 4%;
 }
-
-.popupArticleHistory td:nth-child(2),
-.popupArticleHistory td:nth-child(3) {
-    width: 12%;
-}
-
-.popupArticleHistory td:nth-child(4),
-.popupArticleHistory td:nth-child(5),
-.popupArticleHistory td:nth-child(7),
-.popupArticleHistory td:nth-child(8),
-.popupArticleHistory td:nth-child(10) {
+.popupArticleHistory td:nth-child(6) {
     width: 8%;
 }
 
-.popupArticleHistory td:nth-child(6),
-.popupArticleHistory td:nth-child(9) {
-    width: 16%;
+.popupArticleHistory td:nth-child(3),
+.popupArticleHistory td:nth-child(4),
+.popupArticleHistory td:nth-child(5),
+.popupArticleHistory td:nth-child(7) {
+    width: 12%;
 }
 
-.historyingPopupScrollBox td:nth-child(7),
-.historyingPopupScrollBox td:nth-child(8){
+.popupArticleHistory td:nth-child(8),
+.popupArticleHistory td:nth-child(9),
+.popupArticleHistory td:nth-child(10),
+.popupArticleHistory td:nth-child(11){
+    width: 9%;
+}
+
+.historyingPopupScrollBox td:nth-child(8),
+.historyingPopupScrollBox td:nth-child(9),
+.historyingPopupScrollBox td:nth-child(10) {
     text-align: right;
     padding-right: 1rem;
     box-sizing: border-box;
+}
+
+.deleteChitBtn{
+    background-color: #444;
+    margin-right: 1rem;
 }
